# CodeAgent

./: .gitignore  AGENTS.md  CONTEXT.md  pyproject.toml  run.sh
docs/design/: file-state-cache.md  langfuse-observability.md  llm-tool-call-output.md  openai-compatible-stream-usage.md  plan-execute-mode.md  system-prompt-engineering.md
docs/interview/prompt-design/: README.md  pico-prompt-assembly-comparison.md
docs/plans/: v0-react-mvp.md
docs/specs/v1-tools-and-run-records/: checklist.md  plan.md  spec.md
docs/specs/v2-pcode-tui-agent/: spec.md
docs/specs/v3-langfuse-observability/: checklist.md  plan.md  spec.md
docs/specs/v4-five-layer-permissions/: spec.md
docs/specs/v5-plan-execute-mode/: spec.md
docs/specs/v6-agent-hooks/: plan.md  spec.md
src/codeagent/: __init__.py  agent.py  chat.py  cli.py  config.py  llm.py  observability.py  pcode_agent.py  pcode_cli.py  pcode_tui.py  prompts.py  records.py  tools.py
src/codeagent/hooks/: __init__.py  manager.py
src/codeagent/permissions/: __init__.py  checker.py  dangerous.py  modes.py  rules.py  sandbox.py
src/codeagent/tools/: __init__.py  base.py  bash.py  edit_file.py  exit_plan_mode.py  file_state.py  (+8 more)
tests/: test_cli.py  test_config.py  test_hooks.py  test_observability.py  test_permissions.py  test_react_agent.py
tests/v0_react_mvp/: test_cli.py  test_config.py
tests/v1_tools_and_run_records/: test_react_agent.py  test_records.py  test_tools.py
tests/v2_pcode_tui_agent/: test_chat_protocols.py  test_pcode_agent.py  test_pcode_cli.py
tests/v3_system_prompt_engineering/: test_prompts.py
