[project]
name = "codeagent"
version = "0.1.0"
description = "A minimal Python ReAct code agent."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
  "textual>=0.80",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
codeagent = "codeagent.cli:main"
pcode = "codeagent.pcode_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
